--- a/WEB/index.html
+++ b/WEB/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/css.css">
+    <script src="js/js.js"></script>
 </head>
 
 <body>
-    <script src=""></script>
 </body>
 </html>
