ВСЬО ПА ЧЕТКОМУ

--- a/WEB/pg/workenv.html
+++ b/WEB/pg/workenv.html
@@ -10,7 +10,7 @@
 
 <body>
 <!-- Header -->
-<div height="2%"></div>
+<div class="headerDiv"></div>
 <!-- Working environment -->
 <div class="maindiv">
     <div class="topper">
@@ -34,6 +34,8 @@
     </div>
 </div>
 <!-- Footer -->
-<div height="2%"></div>
+<div class="footerDiv">
+    <button class="sendButton-nonactive"><font class="sender">ОТПРАВИТЬ</font></button>
+</div>
 </body>
 </html>
