--- a/WEB/index.html
+++ b/WEB/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="css/css.css">
-    <script src="js/js.js"></script>
+    <script src="js/js.js" type="text/javascript"></script>
+    <script src="js/index_refresh.js" type="text/javascript"></script>
 </head>
 
 <body>
