--- a/WEB/pg/login.html
+++ b/WEB/pg/login.html
@@ -3,10 +3,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link rel="stylesheet" href="../css/css.css">
-    <script src=""></script>
+    <link rel="stylesheet" href="../css/login.css">
+    <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
+    <script src="../js/login.js" type="text/javascript"></script>
+
 </head>
 
 <body>
+<div class="headerBlock"></div>
+<div id="mainDiv" class="mainBlock">
+    <div class="typeOf">
+        <div id="studDiv" class="student" onclick="setPageToGreen()"></div>
+        <div id="teachDiv" class="teacher" onclick="setPageToRed()"></div>
+    </div>
+    <div class="container_form">
+<div id="login_box">
+	<div id="login_result"></div>
+	<form method="post" action="../php/login.php" id="login_form">
+		<label for="username">Логин:</label>
+		<input name="username" type="text" id="username" value="" maxlength="20" /><br/>
+		<label for="password">Пароль:</label>
+		<input name="password" type="password" id="password" value="" maxlength="20" /><br/>
+		<input name="Submit" type="submit" id="submit" value="Login" /><br/>
+	</form>
+	<p style="text-align:center">Логин: <b>admin</b>. Пароль <b>admin</b></p>
+</div>
+</div>
+</div>
+<div class="footerBlock"></div>
 </body>
 </html>
