--- a/WEB/pg/workenv.html
+++ b/WEB/pg/workenv.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="../css/css.css">
-    <script src="../js/workenv.js"></script>
+    <script src="../js/workenv.js" type="text/javascript"></script>
 </head>
 
 <body>
