--- a/pg/login.html
+++ b/pg/login.html
@@ -5,26 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="../css/login.css">
-    <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
-    <script src="../js/login.js" type="text/javascript"></script>
+    <script src="../js/jquery-2.1.3.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>
+    <script src="../js/login_cache.js" type="text/javascript"></script>
 
 </head>
 
-<body>
+<body ng-controller="ctrl">
 <div class="headerBlock"></div>
 <div id="mainDiv" class="mainBlock">
     <div class="typeOf">
-        <div id="studDiv" class="student" onclick="setPageToGreen()"></div>
-        <div id="teachDiv" class="teacher" onclick="setPageToRed()"></div>
+        <div id="studDiv" class="student" ng-click="setPageToGreen();"></div>
+        <div id="teachDiv" class="teacher" ng-click="setPageToRed();"></div>
     </div>
     <div class="container_form">
 <div id="login_box">
 	<div id="login_result"></div>
-	<form method="post" action="../php/login.php" id="login_form">
+	<form id="login_form" ng-model="human" ng-submit="postData(human); human='';">
 		<label for="username">Логин:</label>
-		<input name="username" type="text" id="username" value="" maxlength="20" /><br/>
+		<input name="username" ng-model="human.Login"/><br/>
 		<label for="password">Пароль:</label>
-		<input name="password" type="password" id="password" value="" maxlength="20" /><br/>
+		<input name="password" ng-model="human.Password"/><br/>
 		<input name="Submit" type="submit" id="submit" value="Login" /><br/>
 	</form>
 	<p style="text-align:center">Логин: <b>admin</b>. Пароль <b>admin</b></p>
