--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="../css/css.css">
+    <script src="../js/jdoc.0.1.0.js" type="text/javascript"></script>
     <script src="../js/workenv.js" type="text/javascript"></script>
 </head>
 
@@ -23,8 +24,7 @@
             <div name="tab" class="tab" style="border-right: 1px solid #ac4;"></div>
         </div>
     </div>
-    <div class="left-div">
-        <textarea class="main-text">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </textarea></div>
+    <div id="pages-container" class="pages-container"></div>
     <div class="right-div">
         <div id="div1" name="contentDiv">1</div>
         <div id="div2" name="contentDiv">2</div>
@@ -35,6 +35,11 @@
 </div>
 <!-- Footer -->
 <div class="footerDiv">
+   <div class="file_upload">
+        <button id="loadFile" class="openbutton"><font class="sender">ВЫБРАТЬ</font></button>
+        <div>Файл не выбран</div>
+        <input id="file-field" type="file">
+    </div>
     <button class="sendButton-nonactive"><font class="sender">ОТПРАВИТЬ</font></button>
 </div>
 </body>
