--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/css.css">
     <script src="../js/jdoc.0.1.0.js" type="text/javascript"></script>
     <script src="../js/workenv.js" type="text/javascript"></script>
+    <script src="../js/jquery-2.1.3.min.js"></script>
 </head>
 
 <body>
