--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -27,7 +27,28 @@
     </div>
     <div id="pages-container" class="pages-container"></div>
     <div class="right-div">
-        <div id="div1" name="contentDiv">1</div>
+        <div id="div1" name="contentDiv">Анализ ПО
+            <div class="attributesText">
+                Объекты
+            </div>
+            <div class="objectText">
+                Атрибуты
+            </div>
+            <div class="obectBox">
+                <p><input type="checkbox" name="a" value="1">  something </p>
+                <p><input type="checkbox" name="a" value="2">  i </p>
+                <p><input type="checkbox" name="a" value="3">  don't </p>
+                <p><input type="checkbox" name="a" value="4">  know </p>
+            </div>
+            <div class="attributesBox">
+                <p><input type="checkbox" name="a" value="1">  kokoko </p>
+                <p><input type="checkbox" name="a" value="2">  koko </p>
+                <p><input type="checkbox" name="a" value="3">  koko </p>
+                <p><input type="checkbox" name="a" value="4">  ko </p>
+            </div>
+        </div>
+
+
         <div id="div2" name="contentDiv">2</div>
         <div id="div3" name="contentDiv">3</div>
         <div id="div4" name="contentDiv">4</div>
