--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -28,11 +28,11 @@
     <div id="pages-container" class="pages-container"></div>
     <div class="right-div">
         <div id="div1" name="contentDiv">Анализ ПО
-            <div class="attributesText">
-                Объекты
+            <div  class="attributesText">
+                <input type="radio" name="obj" > Объекты
             </div>
             <div class="objectText">
-                Атрибуты
+                <input type="radio" name="attr"> Атрибуты
             </div>
             <div class="obectBox">
                 <p><input type="checkbox" name="a" value="1">  something </p>
