--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="../css/css.css">
-    <script src="../js/jdoc.0.1.0.js" type="text/javascript"></script>
+    <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
+    <script src="../js/jdoc.0.5.2.js" type="text/javascript"></script>
+    <script src="../js/textbox.js" type="text/javascript"></script>
     <script src="../js/workenv.js" type="text/javascript"></script>
-    <script src="../js/jquery-2.1.3.min.js"></script>
 </head>
 
 <body>
