--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -35,16 +35,18 @@
                 <input type="radio" name="attr"> Атрибуты
             </div>
             <div class="obectBox">
-                <p><input type="checkbox" name="a" value="1">  something </p>
-                <p><input type="checkbox" name="a" value="2">  i </p>
-                <p><input type="checkbox" name="a" value="3">  don't </p>
-                <p><input type="checkbox" name="a" value="4">  know </p>
+
+                <p>  something </p>
+                <p>  i </p>
+                <p>  don't </p>
+                <p>  know </p>
+
             </div>
             <div class="attributesBox">
-                <p><input type="checkbox" name="a" value="1">  kokoko </p>
-                <p><input type="checkbox" name="a" value="2">  koko </p>
-                <p><input type="checkbox" name="a" value="3">  koko </p>
-                <p><input type="checkbox" name="a" value="4">  ko </p>
+                <p> kokoko </p>
+                <p> koko </p>
+                <p>  koko </p>
+                <p>  ko </p>
             </div>
         </div>
 
