--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -9,6 +9,7 @@
     <script src="../js/jdoc.0.5.2.js" type="text/javascript"></script>
     <script src="../js/textbox.js" type="text/javascript"></script>
     <script src="../js/workenv.js" type="text/javascript"></script>
+    <script  src="../js/selectlinked.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -28,29 +29,34 @@
     </div>
     <div id="pages-container" class="pages-container"></div>
     <div class="right-div">
-        <div id="div1" name="contentDiv">Анализ ПО
-            <div  class="attributesText">
-                <input type="radio" name="obj" > Объекты
-            </div>
+        <div   id="div1" name="contentDiv">Анализ ПО
+
             <div class="objectText">
                 <input type="radio" name="attr"> Атрибуты
             </div>
-            <div class="obectBox">
 
-                <p>  something </p>
-                <p>  i </p>
-                <p>  don't </p>
-                <p>  know </p>
-
+             <div  class="attributesText">
+                <input type="radio" name="obj" > Объекты
             </div>
+
+            <div class="objectBox">
+
+                <select size="5" id="List1" onchange="linkedLists()">
+                    <option value="fly"> Object 1 </option>
+                    <option value="acer"> Object 2</option>
+                </select>
+            </div>
+
             <div class="attributesBox">
-                <p> kokoko </p>
-                <p> koko </p>
-                <p>  koko </p>
-                <p>  ko </p>
+               <select size="5" id="List2" >
+                </select>
             </div>
-        </div>
 
+
+
+
+
+        </div>
 
         <div id="div2" name="contentDiv">2</div>
         <div id="div3" name="contentDiv">3</div>
