--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -10,6 +10,7 @@
     <script src="../js/textbox.js" type="text/javascript"></script>
     <script src="../js/workenv.js" type="text/javascript"></script>
     <script  src="../js/selectlinked.js" type="text/javascript"></script>
+    <script  src="../js/textbox.js" type="text/javascript"></script>
 </head>
 
 <body>
@@ -41,20 +42,24 @@
 
             <div class="objectBox">
 
-                <select size="5" id="List1" onchange="linkedLists()">
-                    <option value="fly"> Object 1 </option>
-                    <option value="acer"> Object 2</option>
+
+                <select class="list" size = "5" id="List1" onchange="linkedLists()">
+                    <option value="Obj1"> Object 1 </option>
+                    <option value="Obj2"> Object 2</option>
                 </select>
             </div>
 
             <div class="attributesBox">
-               <select size="5" id="List2" >
+               <select class="list" size = "5" id="List2" >
                 </select>
             </div>
+            <div class = "wordBox">
+                <textarea id="wordTextBox" cols="30" rows="3" ></textarea>
+                <p><input type="button" value="in Box" onclick="putInBox('12345')"></p>
+                <p><input type="button" value="in List" onclick="putInList()"></p>
 
 
-
-
+            </div>
 
         </div>
 
