--- a/WEB/pg/login.html
+++ b/WEB/pg/login.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="Cache">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href="../css/login.css">
-    <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
-    <script src="../js/login.js" type="text/javascript"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title></title>
+	<link rel="stylesheet" href="../css/login.css">
+
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+	<script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
+
+	<script src="../js/controllers/login-controller.js" type="text/javascript"></script>
 
 </head>
 
-<body>
-<div class="headerBlock"></div>
-<div id="mainDiv" class="mainBlock">
-    <div class="typeOf">
-        <div id="studDiv" class="student" onclick="setPageToGreen()"></div>
-        <div id="teachDiv" class="teacher" onclick="setPageToRed()"></div>
-    </div>
-    <div class="container_form">
-<div id="login_box">
-	<div id="login_result"></div>
-	<form method="post" action="../php/login.php" id="login_form">
-		<label for="username">Логин:</label>
-		<input name="username" type="text" id="username" value="" maxlength="20" /><br/>
-		<label for="password">Пароль:</label>
-		<input name="password" type="password" id="password" value="" maxlength="20" /><br/>
-		<input name="Submit" type="submit" id="submit" value="Login" /><br/>
-	</form>
-	<p style="text-align:center">Логин: <b>admin</b>. Пароль <b>admin</b></p>
-</div>
-</div>
-</div>
-<div class="footerBlock"></div>
+<body ng-controller="LoginController">
+	<div class="headerBlock"></div>
+	<div id="mainDiv" ng-class="{mainBlock: student, 'mainBlockTeacher': teacher}">
+		<div class="typeOf">
+			<div id="studDiv" class="student" ng-click="setStudent()"></div>
+			<div id="teachDiv" class="teacher" ng-click="setTeacher()"></div>
+		</div>
+		<div class="container_form">
+			<div id="login_box">
+				<div id="login_result"></div>
+				<form action="" id="login_form">
+					<label for="login">Логин:</label>
+					<input name="login" type="text" id="username" ng-model="login" />
+					<br/>
+					<label for="password">Пароль:</label>
+					<input name="password" type="password" id="password" ng-model="password" />
+					<br/>
+					<input name="Submit" type="button" id="submit" value="Login" ng-click="submitLogin()" />
+					<br/>
+				</form>
+				<p style="text-align:center">Логин: <b>admin</b>. Пароль <b>admin</b>
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="footerBlock"></div>
 </body>
+
 </html>
