--- a/pg/login.html
+++ b/pg/login.html
@@ -6,8 +6,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title></title>
 	<link rel="stylesheet" href="../css/login.css">
-
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+	<script src="../js/angular.min.js" type="text/javascript"></script>
+	<!--	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>-->
 	<script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
 
 	<script src="../js/controllers/login-controller.js" type="text/javascript"></script>
