--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -42,25 +42,26 @@
 
             <div class="objectBox">
 
-
                 <select class="list" size = "5" id="List1" onclick = "clean('List2');addToAttrList()" >
+
                 </select>
             </div>
 
             <div class="attributesBox">
+
                <select class="list" size = "5" id="List2" >
+
                 </select>
             </div>
             <div class = "objWordBox">
                 <textarea id="wordTextBox" cols="30" rows="3" ></textarea>
-<!--            <p><input type="button" value="in Box" onclick="putInBox('12345')"></p>-->
-                <p><input type="button" value="in List" onclick="addToObjectsList();cleanTextBox('wordTextBox')"></p>
-                <input type="button" value="DeleteObj" onclick="deleteObject()">
+                <p><input type="button" value="in List" onclick="addToObjectsList();cleanTextBox('wordTextBox');"></p>
+                <input type="button" onclick="delButton()" value="111">
+
             </div>
             <div class = "attrWordBox">
                 <textarea id="attrBox" cols="30" rows="3" ></textarea>
                 <p><input type="button" value="AttrInList" onclick="addAttrToObject();addToAttrList();cleanTextBox('attrBox')"></p>
-                <input type="button" value="DeleteAttr" onclick="deleteAttribute()">
             </div>
 
         </div>
