--- a/draw/index.html
+++ b/draw/index.html
@@ -1,5 +1,6 @@
 <html>
     <head>
+        <meta charset="utf-8">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="styles.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
