--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../css/css.css">
     <link rel="stylesheet" href="../css/draw.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
-    <script src="../js/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js" type="text/javascript"></script>
     <script src="../js/snap.svg.js" type="text/javascript"></script>
     <script src="../js/draw.js" type="text/javascript"></script>
     <script src="../js/jdoc.0.5.2.js" type="text/javascript"></script>
@@ -92,6 +92,7 @@
                             <span class="entityTitle">Введите название</span>
                             <input type="text" ng-model="dialogValue" class="entityName" />
                             <input type="button" ng-click="submitChange()" class="entityNameButton" value="OK" />
+                            <input type="button" ng-click="deleteObj()" class="entityNameDeleteButton" value="Delete" />
                         </div>
                     </div>
                 </div>
