--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -1,116 +1,133 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="../css/css.css">
     <link rel="stylesheet" href="../css/draw.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/joint.css">
     <script src="../js/jquery-2.1.3.min.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js" type="text/javascript"></script>
+    <script src="../js/joint.js"></script>
     <script src="../js/snap.svg.js" type="text/javascript"></script>
     <script src="../js/draw.js" type="text/javascript"></script>
     <script src="../js/jdoc.0.5.2.js" type="text/javascript"></script>
     <script src="../js/workenv.js" type="text/javascript"></script>
-    <script  src="../js/textbox.js" type="text/javascript"></script>
+    <script src="../js/textbox.js" type="text/javascript"></script>
+
+    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">-->
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 </head>
 
-
 <body>
-<!-- Header -->
-<div class="headerDiv"></div>
-<!-- Working environment -->
-<div class="maindiv">
-    <div class="topper">
-        <input type="text" style="float: left; margin-left: 6px; border: none;"></input>
-        <div class="tabs-buttons">
-            <div name="tab" class="chosenTab"></div>
-            <div name="tab" class="tab"></div>
-            <div name="tab" class="tab"></div>
-            <div name="tab" class="tab"></div>
-            <div name="tab" class="tab" style="border-right: 1px solid #ac4;"></div>
+    <!-- Header -->
+    <div class="headerDiv"></div>
+    <!-- Working environment -->
+    <div class="maindiv">
+        <div class="topper">
+            <input type="text" style="float: left; margin-left: 6px; border: none;"></input>
+            <div class="tabs-buttons">
+                <div name="tab" class="chosenTab"></div>
+                <div name="tab" class="tab"></div>
+                <div name="tab" class="tab"></div>
+                <div name="tab" class="tab"></div>
+                <div name="tab" class="tab" style="border-right: 1px solid #ac4;"></div>
+            </div>
         </div>
-    </div>
-    <div id="pages-container" class="pages-container"></div>
-    <div class="right-div">
-        <div   id="div1" name="contentDiv">Анализ ПО
-
-            <div class="objectText">
-                 Атрибуты
+        <div id="pages-container" class="pages-container"></div>
+        <div class="right-div">
+            <div id="div1" name="contentDiv">Анализ ПО
+                <div class="objectText">
+                    Атрибуты
+                </div>
+                <div class="attributesText">
+                    Объекты
+                </div>
+                <div class="objectBox">
+                    <select class="list" size="5" id="List1" onclick="clean('List2');addToAttrList()">
+                    </select>
+                </div>
+                <div class="attributesBox">
+                    <select class="list" size="5" id="List2">
+                    </select>
+                </div>
+                <div class="objWordBox">
+                    <textarea id="wordTextBox" cols="30" rows="3"></textarea>
+                    <p>
+                        <input type="button" value="in List" onclick="addToObjectsList();cleanTextBox('wordTextBox');">
+                    </p>
+                    <input type="button" onclick="delButton()" value="111">
+                </div>
+                <div class="attrWordBox">
+                    <textarea id="attrBox" cols="30" rows="3"></textarea>
+                    <p>
+                        <input type="button" value="AttrInList" onclick="addAttrToObject();addToAttrList();cleanTextBox('attrBox')">
+                    </p>
+                </div>
             </div>
-
-             <div  class="attributesText">
-                 Объекты
-            </div>
-
-            <div class="objectBox">
-
-                <select class="list" size = "5" id="List1" onclick = "clean('List2');addToAttrList()" >
-
-                </select>
-            </div>
-
-            <div class="attributesBox">
-
-               <select class="list" size = "5" id="List2" >
-
-                </select>
-            </div>
-            <div class = "objWordBox">
-                <textarea id="wordTextBox" cols="30" rows="3" ></textarea>
-                <p><input type="button" value="in List" onclick="addToObjectsList();cleanTextBox('wordTextBox');"></p>
-                <input type="button" onclick="delButton()" value="111">
-
-            </div>
-            <div class = "attrWordBox">
-                <textarea id="attrBox" cols="30" rows="3" ></textarea>
-                <p><input type="button" value="AttrInList" onclick="addAttrToObject();addToAttrList();cleanTextBox('attrBox')"></p>
-            </div>
-
-        </div>
-
-        <div id="div2" name="contentDiv">
-            <div ng-app="cache" ng-controller="drawController">
-                <div class="container">
-                    <div class="tools border">
-                        <div class="figures">
-                            <div class="column">
-                                <button class="figure" ng-click="initEntity()">Сущность</button>
-                                <button class="figure" ng-click="initAttribute()">Атрибут</button>
+            <div id="div2" name="contentDiv">
+                <div ng-app="cache" ng-controller="drawController">
+                    <div class="drawer">
+                        <div class="tools border">
+                            <div class="figures panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Элементы</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <div class="column">
+                                        <button class="figure btn btn-default" ng-click="initEntity()">Сущность</button>
+                                        <button class="figure btn btn-default" ng-click="initAttribute()">Атрибут</button>
+                                    </div>
+                                    <div class="column">
+                                        <button class="figure btn btn-default" ng-click="initEntity()">Ассоциация</button>
+                                    </div>
+                                </div>
                             </div>
-                            <div class="column">
-                                <button class="figure" ng-click="initEntity()">Ассоциация</button>
+                            <div class="list panel panel-default">
                             </div>
                         </div>
-                        <div class="list">
-                        </div>
-                    </div>
-                    <div class="canvas border">
-                        <svg id="canvas">
-                        </svg>
-                        <div class="dialog" ng-show="dialogShow">
-                            <span class="entityTitle">Введите название</span>
-                            <input type="text" ng-model="dialogValue" class="entityName" />
-                            <input type="button" ng-click="submitChange()" class="entityNameButton" value="OK" />
-                            <input type="button" ng-click="deleteObj()" class="entityNameDeleteButton" value="Delete" />
+                        <div class="canvas panel panel-default border">
+                            <svg id="canvas">
+                            </svg>
+                            <div class="dialog panel panel-default" ng-show="dialogShow">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">Введите название</h3>
+                                </div>
+                                <div class="panel-body">
+                                    <input type="text" ng-model="dialogValue" class="form-control" />
+                                </div>
+                                <div class="panel-footer">
+                                    <input type="button" class="btn btn-default" value="Cancel" />
+                                    <input type="button" ng-click="submitChange()" class="btn btn-primary" value="Save changes" />
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+            <div id="div3" name="contentDiv">3</div>
+            <div id="div4" name="contentDiv">4</div>
+            <div id="div5" name="contentDiv">5</div>
         </div>
-        <div id="div3" name="contentDiv">3</div>
-        <div id="div4" name="contentDiv">4</div>
-        <div id="div5" name="contentDiv">5</div>
     </div>
-</div>
-<!-- Footer -->
-<div class="footerDiv">
-   <div class="file_upload">
-        <button id="loadFile" class="openbutton"><font class="sender">ВЫБРАТЬ</font></button>
-        <div>Файл не выбран</div>
-        <input id="file-field" type="file">
+    <!-- Footer -->
+    <div class="footerDiv">
+        <div class="file_upload">
+            <button id="loadFile" class="openbutton">
+                <font class="sender">ВЫБРАТЬ</font>
+            </button>
+            <div>Файл не выбран</div>
+            <input id="file-field" type="file">
+        </div>
+        <button class="sendButton-nonactive">
+            <font class="sender">ОТПРАВИТЬ</font>
+        </button>
     </div>
-    <button class="sendButton-nonactive"><font class="sender">ОТПРАВИТЬ</font></button>
-</div>
 </body>
+
 </html>
