different figures + renaming

--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -84,7 +84,7 @@
                                         <button class="figure btn btn-default" ng-click="initAttribute()">Атрибут</button>
                                     </div>
                                     <div class="column">
-                                        <button class="figure btn btn-default" ng-click="initEntity()">Ассоциация</button>
+                                        <button class="figure btn btn-default" ng-click="initAssociation()">Ассоциация</button>
                                     </div>
                                 </div>
                             </div>
