--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -102,7 +102,7 @@
                                     <input type="text" ng-model="dialogValue" class="form-control" />
                                 </div>
                                 <div class="panel-footer">
-                                    <input type="button" class="btn btn-default" value="Cancel" />
+                                    <input type="button" ng-click="cancelChange()" class="btn btn-default" value="Cancel" />
                                     <input type="button" ng-click="submitChange()" class="btn btn-primary" value="Save changes" />
                                 </div>
                             </div>
