--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -93,16 +93,22 @@
                         <div class="canvas panel panel-default border">
                             <svg id="canvas">
                             </svg>
-                            <div class="dialog panel panel-default" ng-show="dialogShow">
+                            <div class="dialog change-name panel panel-default" ng-show="renameShow">
                                 <div class="panel-heading">
                                     <h3 class="panel-title">Введите название</h3>
                                 </div>
                                 <div class="panel-body">
-                                    <input type="text" ng-model="dialogValue" class="form-control" />
+                                    <input type="text" ng-model="renameValue" class="form-control" />
                                 </div>
                                 <div class="panel-footer">
                                     <input type="button" ng-click="cancelChange()" class="btn btn-default" value="Cancel" />
                                     <input type="button" ng-click="submitChange()" class="btn btn-primary" value="Save changes" />
+                                </div>
+                            </div>
+                            <div class="dialog panel options panel-default" ng-show="optionsShow">
+                                <div class="list-group">
+                                    <a href="#" class="list-group-item" ng-click="renameObj()">Переименовать</a>
+                                    <a href="#" class="list-group-item list-group-item-danger" ng-click="deleteObj()">Удалить</a>
                                 </div>
                             </div>
                         </div>
