options closing on canvas click

--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -90,7 +90,7 @@
                             <div class="list panel panel-default">
                             </div>
                         </div>
-                        <div class="canvas panel panel-default border">
+                        <div class="canvas panel panel-default border" ng-click="closeOptions()">
                             <svg id="canvas">
                             </svg>
                             <div class="dialog change-name panel panel-default" ng-show="renameShow">
