--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="../css/css.css">
+    <link rel="stylesheet" href="../css/workenv.css">
     <link rel="stylesheet" href="../css/draw.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/joint.css">
@@ -32,8 +33,12 @@
         <div class="topper">
             <input type="text" style="float: left; margin-left: 6px; border: none;"></input>
             <div class="tabs-buttons">
-                <div name="tab" class="chosenTab"></div>
-                <div name="tab" class="tab"></div>
+                <div name="tab" class="chosenTab">
+                    <h5 class="tabName">Анализ ПО</h3>
+                </div>
+                <div name="tab" class="tab">
+                    <h5 class="tabName">Диаграмма ER</h3>
+                </div>
                 <div name="tab" class="tab"></div>
                 <div name="tab" class="tab"></div>
                 <div name="tab" class="tab" style="border-right: 1px solid #ac4;"></div>
@@ -41,34 +46,52 @@
         </div>
         <div id="pages-container" class="pages-container"></div>
         <div class="right-div">
-            <div id="div1" name="contentDiv">Анализ ПО
-                <div class="objectText">
-                    Атрибуты
+            <div id="div1" style="padding: 20px;" name="contentDiv">
+                <div class="gorizont">
+                    <div class="selects panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">
+                            Объекты
+                            </h3>
+                        </div>
+                        <div class="panel-body">
+                            <select class="list" size="5" id="List1" onclick="clean('List2');addToAttrList()">
+                            </select>
+                        </div>
+                    </div>
+                    <div class="selects panel panel-default">
+                        <div class="panel-heading">
+                            <h3 class="panel-title">
+                            Атрибуты
+                            </h3>
+                        </div>
+                        <div class="panel-body">
+                            <select class="list" size="5" id="List2">
+                            </select>
+                        </div>
+                    </div>
                 </div>
-                <div class="attributesText">
-                    Объекты
-                </div>
-                <div class="objectBox">
-                    <select class="list" size="5" id="List1" onclick="clean('List2');addToAttrList()">
-                    </select>
-                </div>
-                <div class="attributesBox">
-                    <select class="list" size="5" id="List2">
-                    </select>
-                </div>
-                <div class="objWordBox">
-                    <textarea id="wordTextBox" cols="30" rows="3"></textarea>
-                    <p>
-                        <input type="button" value="in List" onclick="addToObjectsList();cleanTextBox('wordTextBox');">
-                    </p>
-                </div>
-                <div class="attrWordBox">
-                    <textarea id="attrBox" cols="30" rows="3"></textarea>
-                    <p>
-                        <input type="button" value="AttrInList" onclick="addAttrToObject();addToAttrList();cleanTextBox('attrBox')">
-                    </p>
+
+                <div class="gorizont">
+                    <div class="inputs panel panel-default">
+                       <div style="background-color: #fff; padding: 0;" class="panel-heading">
+                        <textarea class="textareas" id="wordTextBox" cols="30" rows="2" ></textarea>
+                        </div>
+                        <div style="padding:0;" class="panel-body">
+                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="in List" onclick="addToObjectsList();cleanTextBox('wordTextBox');">
+                        </div>
+                    </div>
+                    <div class="inputs panel panel-default">
+                       <div style="background-color: #fff; padding: 0;" class="panel-heading">
+                        <textarea class="textareas" id="attrBox" cols="30" rows="2" ></textarea>
+                        </div>
+                        <div style="padding:0;" class="panel-body">
+                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="AttrInList" onclick="addAttrToObject();addToAttrList();cleanTextBox('attrBox')">
+                        </div>
+                    </div>
                 </div>
             </div>
+
             <div id="div2" name="contentDiv">
                 <div ng-app="cache" ng-controller="drawController">
                     <div class="drawer">
