add control panel

--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -27,7 +27,26 @@
 
 <body>
     <!-- Header -->
-    <div class="headerDiv"></div>
+    <div class="headerDiv">
+     <div id='cont'>
+	<div class="controlPanel" id="icon">
+
+	</div>
+	<div class="controlPanel" id="userName">
+	  Student
+	</div>
+	<div class="controlPanel">
+	  <button id="settingsButton" class="openbutton">
+                <font class="sender">Settings</font>
+            </button>
+	</div>
+	<div class="controlPanel">
+	  <button id="logOut" class="openbutton">
+                <font class="sender" onclick="location.href='login.html'">Logout</font>
+            </button>
+	</div>
+</div>
+    </div>
     <!-- Working environment -->
     <div class="maindiv">
         <div class="topper">
