--- a/pg/workenv.html
+++ b/pg/workenv.html
@@ -88,7 +88,7 @@
                         <textarea class="textareas" id="wordTextBox" cols="30" rows="2" ></textarea>
                         </div>
                         <div style="padding:0;" class="panel-body">
-                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="in List" onclick="addToObjectsList();cleanTextBox('wordTextBox');">
+                        <input type="button" style="border:none; width:100%; height:100%; margin:0;" class="btn btn-default" value="in List" onclick="addToObjectsList();cleanTextBox('wordTextBox')">
                         </div>
                     </div>
                     <div class="inputs panel panel-default">
