--- a/pg/projects.html
+++ b/pg/projects.html
@@ -75,7 +75,7 @@
                     <div class="panel">
                         <div class="panel-heading">
                             <h3 >
-                            Преподаватель:
+                            Преподаватели:
                             </h3>
                         </div>
                     </div>
